--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 
-<ul>
-    <% @articles.each do |article|%>
-        <li>
-            <%= link_to article.title, article_path(article) %><br />
-        </li>
-    <% end %>
-</ul>
+<% @articles.each do |article| %>
+    <h1>
+        <%= link_to article.title, article_path(article) %><br />
+    </h1>
+<% end %>
+
+<%= link_to 'Write Article', new_article_path%>
